[tool.poetry]
name = "epub-thing"
version = "0.1.0"
description = ""
authors = ["aTomWeaver <atomweavermail@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
